# volume-control

./: .gitignore  .pylintrc  CLAUDE.md  Dockerfile  Makefile  README.md  automated-commands.cron  pyproject.toml
old/: keys_u_d_vol_up_down.py  testing-ir-module.py  volume_controller_lirc.py
remotes/: ADJ-REMOTE.lircd.conf  list-of-all-buttons.md  onkyo.lircd.conf  onkyo_additions.lircd.conf  roku.lircd.conf
scripts/: coordinator.py  keys_u_d_vol_up_down.py  logger.py  remote.py  shell-aliases.sh  temp.py  volume_control.py  volume_controller_evdev_lirc.py
scripts/old/: volume_controller_switchbot.py
src/: coordinator.py  remote.py  requirements.txt  shell-aliases.sh  volume_control.py  volume_control.service
utils/: key_release.py  key_tester.py
